--- a/8. React_but_without_template.md
+++ b/8. React_but_without_template.md
@@ -1,4 +1,4 @@
-```js
+```jsx
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -13,14 +13,21 @@
     <script src="https://unpkg.com/react@18.0.0-rc.0/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18.0.0-rc.0/umd/react-dom.development.js"></script>
     <script>
+    
+      // createElement accepts 3 parameters,
+      
       const App = () => {
         return React.createElement("div", {}, [
           React.createElement("h1", { class: "title" }, "React IS rendered"),
         ]);
       };
+      
+      // ReactDOM.render() have 2 parameters 
+      // render what and render where. 
+      
       ReactDOM.render(
-        React.createElement(App),
-        document.getElementById("root")
+        React.createElement(App), 
+        document.getElementById("root") 
       );
     </script>
   </body>
