--- a/8. React_but_without_template.md
+++ b/8. React_but_without_template.md
@@ -1,3 +1,5 @@
+# Step 1
+
 ```jsx
 <!DOCTYPE html>
 <html lang="en">
@@ -32,4 +34,29 @@
     </script>
   </body>
 </html>
+```
+
+# Step 2
+```jsx
+    <script>
+      const Person = (props) => {
+        return React.createElement("div", {}, [
+          React.createElement("h1", {}, props.name),
+          React.createElement("p", {}, props.occupation),
+        ]);
+      };
+      const App = () => {
+        return React.createElement("div", {}, [
+          React.createElement("h1", { class: "title" }, "React IS rendered"),
+          React.createElement(Person, { name: "A", occupation: "a" }, null),
+          React.createElement(Person, { name: "B", occupation: "b" }, null),
+          React.createElement(Person, { name: "C", occupation: "c" }, null),
+        ]);
+      };
+      ReactDOM.render(
+        React.createElement(App),
+        document.getElementById("root")
+      );
+    </script>
+
 ```
