--- a/8. React_but_without_template.md
+++ b/8. React_but_without_template.md
@@ -60,3 +60,54 @@
     </script>
 
 ```
+
+# Step 3 
+### index.html
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title></title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="css/style.css" rel="stylesheet" />
+  </head>
+
+  <body>
+    <div id="root">React is NOT rendered</div>
+    <script src="https://unpkg.com/react@18.0.0-rc.0/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18.0.0-rc.0/umd/react-dom.development.js"></script>
+    <script src="./app.js"></script>
+  </body>
+</html>
+
+```
+
+### App.jsx
+
+```jsx
+const Person = (props) => {
+  return React.createElement("div", {}, [
+    React.createElement("h1", {}, props.name),
+    React.createElement("p", {}, props.occupation),
+  ]);
+};
+const App = () => {
+  return React.createElement("div", {}, [
+    React.createElement("h1", { class: "title" }, "React IS rendered"),
+    React.createElement(Person, { name: "A", occupation: "a" }, null),
+    React.createElement(Person, { name: "B", occupation: "b" }, null),
+    React.createElement(Person, { name: "C", occupation: "c" }, null),
+  ]);
+};
+
+// Either use these 3 lines
+const container = document.getElementById("root");
+const root = ReactDOM.createRoot(container);
+root.render(React.createElement(App));
+
+// Or use this one line.
+// ReactDOM.render(React.createElement(App), document.getElementById("root"));
+
+```
