--- a/9. CRA_to_Vite.md
+++ b/9. CRA_to_Vite.md
@@ -9,6 +9,7 @@
     ```js
       "devDependencies": {
         "@vitejs/plugin-react-refresh": "^1.3.1",
+        "@vitejs/plugin-react": "^3.1.0",
         "vite": "^2.4.4"
       }
     ```
